# tinescale

./: Cargo.toml  README.md  build.rs  go.mod  go.sum
cmd/tinescale/: main.go
pkg/derppool/: derppool.go
pkg/device/: bind.go  derp.go  device.go  grcp_server.go  noise-helpers.go  tun.go  uapi.go
pkg/endpointpool/: endpointpool.go  endpointpool.pb.go  endpointpool.proto
pkg/epservice/: endpoints.pb.go  endpoints.proto  endpoints_grpc.pb.go
pkg/helper/: helper.go
pkg/proto/: device.pb.go  device.proto  device_grpc.pb.go
pkg/relay/: relay.go
pkg/securemsg/: securemsg.go  securemsg.pb.go  securemsg.proto
pkg/stunPool/: stunPool.go
pkg/tun/: tun.go  tun.pb.go  tun.proto
proto/: coordination.proto
src/: client.rs  main.rs  serialization.rs  server.rs  wghandle.rs
tests/: Dockerfile  docker-compose.yaml  entrypoint.sh  genkey.sh  peer1.toml  peer2.toml
tests/nat1/: docker-compose.yaml  peer2.ipc
tests/same-net-1/: docker-compose.yaml  peer1.ipc  peer1.toml  peer2.ipc  peer2.toml
tests/same-net-derp/: docker-compose.yaml  peer1.ipc  peer2.ipc
tests/same-net-derp-stun/: docker-compose.yaml  peer1.ipc
tmp/: peer1.ini  peer2.ini
