[package]
name = "tinescale"
version = "0.1.0"
edition = "2021"

[dependencies]
boringtun = { git = "https://github.com/bajacc/boringtun.git", features = ["device"], branch = "tinescale"}
anyhow = "1.0.98"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tonic = { version = "0.13.1", features = ["transport"] }
x25519-dalek = "2.0.1"
prost = "0.13.5"
clap = { version = "4.5.40", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.1"
